fix #3. Horizontal scroll fixed on 404 pages

--- a/plonetheme/clean_blog/theme/less/partials/typography.less
+++ b/plonetheme/clean_blog/theme/less/partials/typography.less
@@ -46,3 +46,6 @@
 	}
 }
 
+body.template-default_error_message #content-core p{
+	white-space: inherit !important;
+}
